FI_website_replica.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*removes all bullets*/
ul {
    list-style-type: none;
}

footer {
    padding: 2rem;
}

h2  {
    font-weight: 400;
}

h4 {
    font-weight:bold;
}

input {
    color:#000;
    width: 12vw;
    float: right;
}

ul {
    display: contents;
}

ul>li>a {
    text-decoration: none;
}

span>ul>li>a, div>span>a, hr {
    color: #fff;
}

summary>strong>a {
    color: #0f246a;
}

.top-margin-5 {
    margin-top: -5rem;
}

.top-margin-15 {
    margin-top: -15rem;
}

.btm-margin-5 {
    margin-bottom: -5rem;
}

.btn-style:hover {
    background-color: #0e8c21 !important;
}

.btn-style {
    color: #fff;
    font-weight: bold;
    padding: 1%;
    border-radius: 0.3em;
    }

.green-important, .btn-style {
    background-color: #007a53
}
    
.dropbtn {
    color: #fff;
    padding: 1%;
    font-size: 1rem;
    border: none;
    border-radius: .3rem;
}

/* hover on dropbtn*/
.dropdown:hover .dropbtn {
    background-color: #fff;
    color: #000;
}

/* drop down */
.dropdown {
    display: inline-block;
}

/* revealed content */
.dropdown-content {
    display: none;
    position: absolute;
    padding: 1rem;
    background-color: #fff;
    color: #000;
    text-decoration: none;
    z-index: 1;
}

/* hover effects on revealed content*/
.dropdown:hover .dropdown-content {
    display: block;
}

/* revealed link */
.dropdown-content a {
    color: #000;
    padding: 0.5rem 20rem 0rem 0rem;
    text-decoration: none;
    display: block;
}

/* hover over revealed link */
.dropdown-content a:hover {
    background-color: #52eb00;
}

.box-size {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 3vh;
    margin-top: 3vh;
}

.box-size-10{
    width: 10vw;
}

.box-size-70 {
    width: 70vw;
}

.box-size-94 {
    width: 94vw;
}

.box-margin {
    padding: 1rem;
    margin: 2rem;
}

.width20 {
    width: 20%;
}
.create-columns {
    display: flex;
    flex-direction: row;
}

.flag-icon-size{
    width:2%;
    height:2%;
}

.footer-columns {
    margin-left: 2.5rem;
    margin-right: 6rem;
    width: 99%;
    padding-right: 21rem;
    -webkit-border-horizontal-spacing: inherit;
}

.blue-text {
    color: #00124d;
}

.left-text {
    text-align: left;
    padding: .5rem
}

.nav-bar-text {
    margin-left: .5rem;
    margin-right: 2rem;
    width: 100%;
}
.nav-bar-text:hover {
    cursor: pointer;
}

.black-link {
    color: #000;
}

.link-no-underline {
    text-decoration: none;
}

.centered-text {
    text-align: center;
}

.vertical-centered-text {
    place-self: center;
}

.box-with-border {
    border: 0.1rem solid #000;
    padding: 1rem;
}

.box-white-border {
    border: 0.1rem solid #fff;
    padding: 0.5rem;
    font-style: italic;
}

.forest-green, footer {
    background-color: #034638;
    color: #fff;
}

.smaller-space-down {
    margin-bottom: 2rem;
}
.title-grn {
    color:#095715;
}

.white-background {
    background-color: #fff;
    color:#000;
}

.white-text {
    color: #fff;
}

#logo-art{
    width: 30%;
    margin-left: -2%;
}

#sydney-art{
    width: 100%;
    height: 100%;
    position: relative;
    margin: 20px;
}

.image-art{
    width: 42%;
}

.align-items-ctr {
    display: flex;
    align-items: center;
}

.align-text-left {
    text-align: -webkit-left;
}

.double-column{
    display: flex;
}

.carousel-card {
    width: 18vw;
    height: 48vh;
    position: relative;
}

.triple-column {
    display: -webkit-box;
    padding: 1rem;
    width: min-content;
} 

.powder-blue{
    background-color: powderblue;
}

.to-mid-right {
    display: flex;
    place-content: end;
}

.to-the-right {
    display: flex;
    place-content: end;
}


.white-space {
    margin: -4rem 3rem;
}

#middle-of-space {
    margin-top: 5vh;
    margin-bottom: 5vh;    
}

#commentary {
    height: 60vh;
    text-align: center;

}

.strip {
    height: 5vh;
    z-index: 1;
    position: relative;
}

#yellow-strip{
    background-color: rgb(130, 130, 0);
}

#blue-strip{
    background-color: rgb(0, 55, 130);
}

#green-strip{
    background-color: #095715;
}

#services {
    width: 32vw;
    margin: 1rem;
}

#executive-summary{
    width: 40%;
    height: 40%;
    position: relative;
    padding: 1rem;
    top: -33rem;
    right: -40rem;
    }

.stack-top {
    z-index: 1;
    margin: 3rem;
    height: 6rem;
    width: 10rem;
    top: 0;
    right: 0;
}

#executive-background{
    background-color: #00bcd4;
}

#contact-and-details {
    font-weight: bold;
    padding-top: 1vh;
}

#small-icon {
    width: 4%;
    margin-left: 30vw;
}

#picture-frame {
    margin-top: -81vh;
}

